--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             data-aos-delay="200">
             <div class="icon-box iconbox-orange ">
               <div>
-                <img src="../portifolio/assets/img/projetoVitalPulse.png" style="width: 100%;" alt="Projeto VitalPulse">
+                <img src="./assets/img/projetoVitalPulse.png" style="width: 100%;" alt="Projeto VitalPulse">
               </div>
               <h4><a href="">VitalPulse</a></h4>
               <p>projeto back end
@@ -459,7 +459,7 @@
             data-aos-delay="100">
             <div class="icon-box">
               <div>
-                <img src="../portifolio/assets/img/projetoWoodyBurger.png" style="width: 100%; height: auto;"
+                <img src="./assets/img/projetoWoodyBurger.png" style="width: 100%; height: auto;"
                   alt="Projeto Woody Burger">
               </div>
               <h4><a href="">Woody Burger</a></h4>
@@ -479,7 +479,7 @@
             <div class="icon-box iconbox-red">
               <div>
                 <div>
-                  <img src="../portifolio/assets/img/Alura-Space.png" style="width: 100%; height: auto;"
+                  <img src="./assets/img/Alura-Space.png" style="width: 100%; height: auto;"
                     alt="Projeto Alura-Space">
                 </div>
               </div>
@@ -507,7 +507,7 @@
             <div class="icon-box iconbox-blue">
               <div>
                 <div>
-                  <img src="../portifolio/assets/img/soon.png" style="width: 50%; height: auto;" alt="Futuros projetos">
+                  <img src="./assets/img/soon.png" style="width: 50%; height: auto;" alt="Futuros projetos">
                 </div>
               </div>
               <h4><a href="">Em breve mais projetos estarão aqui...</a></h4>
