--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
           </button>
         </form>
         <div class="row mt-4">
-          <div>
+          <div class="ml-2 mr-4">
             <button id="botaoEmail" class="botaoEmail">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
                 viewBox="0 0 16 16">
@@ -619,11 +619,9 @@
             </button>
           </div>
 
-          <div class="ml-4 col-lg-3" style="width: 100%; height: 20px;">
             <a href="./Marco-Aguiar_CV.pdf" download="Marco-Aguiar_CV">
               <button class="botaoEmail">Baixar Currículo</button>
             </a>
-          </div>
         </div>
 
         <dialog>
