--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
               <div>
                 <img src="./assets/img/projetoVitalPulse.png" style="width: 100%;" alt="Projeto VitalPulse">
               </div>
-              <h4><a href="">VitalPulse</a></h4>
+              <h4><a href="https://github.com/Marco-Aguiar/VitaPulse">VitalPulse</a></h4>
               <p>projeto back end
                 com a finalidade de desenvolver
                 minhas skills em API's REST e
@@ -462,7 +462,7 @@
                 <img src="./assets/img/projetoWoodyBurger.png" style="width: 100%; height: auto;"
                   alt="Projeto Woody Burger">
               </div>
-              <h4><a href="">Woody Burger</a></h4>
+              <h4><a href="https://github.com/Marco-Aguiar/WoodyBurger">Woody Burger</a></h4>
               <p>projeto focado
                 em conhecimentos Front-end,
                 envolvendo noções de VueJs,
@@ -483,7 +483,7 @@
                     alt="Projeto Alura-Space">
                 </div>
               </div>
-              <h4><a href="">Alura-Space</a></h4>
+              <h4><a href="https://github.com/Marco-Aguiar/alura-space">Alura-Space</a></h4>
               <p>Curso finalizado gerenciado pela alura, envolvendo conhecimentos de python e django, com enfâse em
                 sistema web.</p>
             </div>
@@ -497,7 +497,7 @@
                     alt="Projeto Credit-Card">
                 </div>
               </div>
-              <h4><a href="">Credit-Card</a></h4>
+              <h4><a href="https://github.com/Marco-Aguiar/credit-card">Credit-Card</a></h4>
               <p>O Credit-Card é um componente que simula o formulário de preenchimento de cartão de crédito em
                 aplicações web, onde é possível adicionar máscara aos inputs e atualizar elementos HTML via DOM.</p>
             </div>
