atualização job description e CV

--- a/index.html
+++ b/index.html
@@ -266,30 +266,33 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Experiência</h3>
             <div class="resume-item">
-              <h4>Estágiario Desenvolvedor Back-end</h4>
-              <h5>Julho 2021 - Dezembro 2022</h5>
-              <p><em>Home Office </em></p>
-              <ul>
-                <li>Como primeira tarefa prática, desenvolvi um sistema a fim de facilitar o gerenciamento sobre as
-                  próximas formações de estagiários</li>
-                <li>Neste projeto consegui me aprofundar em VueJs, NodeJs, Java Springboot e colocar em prática os conteúdos
-                  aprendidos durante a formação, envolvendo noções de autenticação, autorização, consumir API's dentre outros.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Trainee Desenvolvedor Back-end</h4>
+              <h4>Desenvolvedor Back-end</h4>
               <h5 id="atual">Cargo Atual</h5>
               <br>
               <h5>Dezembro 2022 - Presente</h5>
               <p><em>Home Office</em></p>
               <ul>
-                <li>Agora como trainee, comecei a atuar em projetos com clientes, com tecnologias Angular e Java Servlets.</li>
+                <li>Como primeira tarefa prática, desenvolvi um sistema full-stack para facilitar os processos na área de RH. Este
+                  projeto tinha como objetivo manter toda a informação centralizada em uma única aplicação, sem necessidade de
+                  criar planilhas ou utilizar aplicativos externos.<br>
+                  <strong>Com esta implementação, a gestão de processos do RH
+                  relacionado a informação e gerenciamento de informações
+                  dos funcionários teve uma mudança muito positiva, sendo
+                  eficiente, responsivo, organizado e intuitivo.</strong><br>
+                  <i style="color: blue; font-weight: 500; font-size: large;">Tecnologias utilizadas: VueJs, NodeJs e Springboot.</i></li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Estágiario Desenvolvedor Back-end</h4>
+              <h5>Julho 2021 - Dezembro 2022</h5>
+              <p><em>Home Office </em></p>
+              <ul>
+                <li>Comecei a atuar em projetos com clientes, com tecnologias Angular e Java Servlets.</li>
                 <li>Desde projetos feitos do zero, como também projetos para refatorar e realizar novas ferramentas e implementações.</li>
               </ul>
             </div>
           </div>
         </div>
-
       </div>
     </section>
 
