--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p> <span class="typed" data-typed-items="Full-Stack Developer, Software Engineer"></span></p>
         <div class="social-links">
           <a href="https://github.com/Marco-Aguiar" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://www.instagram.com/aguilarco10/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/marco_aguiardev/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/marco-aguiar-sp/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
         <div class="flip" id="card">
