--- a/index.html
+++ b/index.html
@@ -443,6 +443,14 @@
           <h2>Entre em contato!</h2>
         </div>
 
+        <form action="https://formsubmit.co/marcoaguiar14@gmail.com" method="POST">
+          <input type="text" name="name" placeholder="Name" required>
+          <input type="email" name="email" placeholder="Email" required>
+          <input type="text" name="subject" placeholder="Assunto" required>
+          <input type="text" name="message" placeholder="Mensagem" required>
+          <button type="submit">Enviar</button>
+     </form> 
+
 
 
         <form method="post" class="pb-1">
