--- a/index.html
+++ b/index.html
@@ -443,31 +443,62 @@
           <h2>Entre em contato!</h2>
         </div>
 
-        <form action="https://formsubmit.co/marcoaguiar14@gmail.com" method="POST">
+        <!-- <form action="https://formsubmit.co/marcoaguiar14@gmail.com" method="POST">
           <input type="text" name="name" placeholder="Name" required>
           <input type="email" name="email" placeholder="Email" required>
           <input type="text" name="subject" placeholder="Assunto" required>
           <input type="text" name="message" placeholder="Mensagem" required>
           <button type="submit">Enviar</button>
-     </form> 
+     </form>  -->
 
 
 
-        <form method="post" class="pb-1">
-          <input type="hidden" name="accessKey" value="bda3d26e-bc25-48a0-825e-73091cb647f6">
+        <form method="post" action="https://formsubmit.co/marcoaguiar14@gmail.com" class="pb-1">
+          <h4 class="email">Nome:</h4>
+          <div>
+            <input type="text" name="nome" required class="mb-3 inputsEmail">
+          </div>
           <h4 class="email">Email:</h4>
           <div>
-            <input id="inputEmail" type="text" name="email" class="mb-3 inputsEmail">
-            <p id="erroEmail" style="color: red; font-weight: 500; display: none;">Preencha este campo!</p>
+            <input type="text" name="email" required class="mb-3 inputsEmail">
+          </div>
+          <h4 class="email mensagem">Assunto:</h4>
+          <div>
+            <input type="text" name="assunto" required class="mb-3 inputsEmail">
           </div>
           <h4 class="email mensagem">Mensagem:</h4>
           <div>
-            <textarea name="message" id="textarea" class="inputsEmail"></textarea>
-            <p id="erroMensagem" style="color: red; font-weight: 500; display: none;">Preencha este campo!</p>
+            <textarea name="message" id="textarea" required class="inputsEmail"></textarea>
           </div>
 
-          <input type="hidden" name="redirectTo" value="https://aguiarprogrammer.vercel.app">
-          <button formaction="https://api.staticforms.xyz/submit" id="botaoSend" class="botaoEmail"
+
+          <div class="row mt-4">
+            <div class="ml-2 mr-4">
+              <button id="botaoEmail" class="botaoEmail">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z" />
+                </svg>
+                <div class="wrapper">
+                  <i class="bi bi-send"></i>
+                  <span id="spanButton">Enviar</span>
+                </div>
+              </button>
+            </div>
+          </form>
+          <a href="./Marco-Aguiar_CV.pdf" download="Marco-Aguiar_CV">
+            <button class="botaoEmail">Baixar Currículo</button>
+          </a>
+          </div>
+         
+
+
+
+
+
+
+          <!-- <button formaction="https://api.staticforms.xyz/submit" id="botaoSend" class="botaoEmail"
             style="display: none;">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
               viewBox="0 0 16 16">
@@ -478,27 +509,8 @@
               <i class="bi bi-send"></i>
               <span id="spanButton">Enviar</span>
             </div>
-          </button>
-        </form>
-        <div class="row mt-4">
-          <div class="ml-2 mr-4">
-            <button id="botaoEmail" class="botaoEmail">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
-                viewBox="0 0 16 16">
-                <path
-                  d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z" />
-              </svg>
-              <div class="wrapper">
-                <i class="bi bi-send"></i>
-                <span id="spanButton">Enviar</span>
-              </div>
-            </button>
-          </div>
-
-            <a href="./Marco-Aguiar_CV.pdf" download="Marco-Aguiar_CV">
-              <button class="botaoEmail">Baixar Currículo</button>
-            </a>
-        </div>
+          </button> -->
+       
 
         <dialog>
           <h4>Mensagem enviada com sucesso!</h4>
