--- a/index.html
+++ b/index.html
@@ -486,10 +486,10 @@
                 </div>
               </button>
             </div>
+            <a href="./Marco-Aguiar_CV.pdf" download="Marco-Aguiar_CV">
+              <button type="button" class="botaoEmail">Baixar Currículo</button>
+            </a>
           </form>
-          <a href="./Marco-Aguiar_CV.pdf" download="Marco-Aguiar_CV">
-            <button class="botaoEmail">Baixar Currículo</button>
-          </a>
           </div>
          
 
