--- a/index.html
+++ b/index.html
@@ -93,13 +93,15 @@
         </div>
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/perfil.jpg" class="img-fluid" alt="">
+            <img src="assets/img/perfil2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
 
             <p class="font-italic">
-              Sou desenvolvedor Full-Stack, atualmente desenvolvendo projetos em Java com aplicação em Angular e VueJs.
-              Comecei a estudar programação em 2019 e desde então estou até os dias atuais.</p>
+              Desenvolvedor Full-Stack, atualmente desenvolvendo projetos em Java com aplicação em Angular.<br>
+              No momento presente, estudando Inteligência Artificial para desenvolver um projeto para <a style="color: blue; font-weight: 500;" href="https://www.huawei.com/br/">Huawei</a>,
+              um chatbot automatizado para auxiliar clientes e futuros compradores com dúvidas.<br>
+              </p>
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -272,6 +274,15 @@
               <h5>Dezembro 2022 - Presente</h5>
               <p><em>Home Office</em></p>
               <ul>
+                <li>Comecei a atuar em projetos com clientes, com tecnologias Angular e Java Servlets.</li>
+                <li>Desde projetos feitos do zero, como também projetos para refatorar e realizar novas ferramentas e implementações.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Estágiario Desenvolvedor Back-end</h4>
+              <h5>Julho 2021 - Dezembro 2022</h5>
+              <p><em>Home Office </em></p>
+              <ul>
                 <li>Como primeira tarefa prática, desenvolvi um sistema full-stack para facilitar os processos na área de RH. Este
                   projeto tinha como objetivo manter toda a informação centralizada em uma única aplicação, sem necessidade de
                   criar planilhas ou utilizar aplicativos externos.<br>
@@ -280,15 +291,6 @@
                   dos funcionários teve uma mudança muito positiva, sendo
                   eficiente, responsivo, organizado e intuitivo.</strong><br>
                   <i style="color: blue; font-weight: 500; font-size: large;">Tecnologias utilizadas: VueJs, NodeJs e Springboot.</i></li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Estágiario Desenvolvedor Back-end</h4>
-              <h5>Julho 2021 - Dezembro 2022</h5>
-              <p><em>Home Office </em></p>
-              <ul>
-                <li>Comecei a atuar em projetos com clientes, com tecnologias Angular e Java Servlets.</li>
-                <li>Desde projetos feitos do zero, como também projetos para refatorar e realizar novas ferramentas e implementações.</li>
               </ul>
             </div>
           </div>
@@ -313,7 +315,7 @@
                 <img src="./assets/img/projetoVitalPulse.png" style="width: 100%;" alt="Projeto VitalPulse">
               </div>
               <h4><a href="https://github.com/Marco-Aguiar/VitaPulse">VitalPulse</a></h4>
-              <p>projeto back end
+              <p>Projeto back end
                 com a finalidade de desenvolver
                 minhas skills em API's REST e
                 Spring Boot. Envolvendo
@@ -330,7 +332,7 @@
                 <img src="./assets/img/Credit-Card.png" style="width: 100%; height: auto;"
                     alt="Projeto Credit-Card">
               </div>
-              <h4><a href="https://github.com/Marco-Aguiar/credit-card">Credit-Card</a></h4>
+              <h4><a href="https://credit-card-forms.vercel.app/">Credit-Card</a></h4>
               <p>O Credit-Card é um componente que simula o formulário de preenchimento de cartão de crédito em
                 aplicações web, onde é possível adicionar máscara aos inputs e atualizar elementos HTML via DOM.</p>
             </div>
@@ -341,13 +343,31 @@
             <div class="icon-box iconbox-red">
               <div>
                 <div>
-                  <img src="./assets/img/Alura-Space.png" style="width: 100%; height: auto;"
+                  <img src="./assets/img/geradorDeSenha.png" style="width: 100%; height: auto;"
                     alt="Projeto Alura-Space">
                 </div>
               </div>
-              <h4><a href="https://github.com/Marco-Aguiar/alura-space">Alura-Space</a></h4>
-              <p>Curso finalizado gerenciado pela alura, envolvendo conhecimentos de python e django, com enfâse em
-                sistema web.</p>
+              <h4><a href="https://senhacreator.vercel.app/">Gerador de senha Online</a></h4>
+              <p>Projeto finalizado de um gerador de senha automatizado, no qual é possível determinar o tamanho e composição de uma senha.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box iconbox-pink">
+              <div>
+                <div>
+                  <img src="./assets/img/hotelaguiar.png" style="width: 100%; height: auto;"
+                  alt="Projeto Woody Burger">
+                </div>
+              </div>
+              <h4><a href="https://aguiarhotel.vercel.app/">Hotéis Aguiar</a></h4>
+              <p>Projeto focado
+                em conhecimentos Front-end,
+                envolvendo noções de JavaScript.
+                Um sistema direcionado para
+                clientes visualizarem,
+                cadastrarem e administrarem
+                reserva de hotéis.</p>
             </div>
           </div>
 
@@ -360,7 +380,7 @@
                 </div>
               </div>
               <h4><a href="https://github.com/Marco-Aguiar/WoodyBurger">Woody Burger</a></h4>
-              <p>projeto focado
+              <p>Projeto focado
                 em conhecimentos Front-end,
                 envolvendo noções de VueJs,
                 Banco de dados em formato JSON.
@@ -382,6 +402,7 @@
               <p></p>
             </div>
           </div>
+          
 
         </div>
 
