--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">VueJs <i class="val"></i></span>
+              <span class="skill"> NodeJs <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -180,7 +180,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Kotlin <i class="val"></i></span>
+              <span class="skill">React <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                 </div>
