--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
             <p class="font-italic">
               Desenvolvedor Full-Stack, atualmente desenvolvendo projetos em Java com aplicação em Angular.<br>
-              No momento presente, estudando Inteligência Artificial para desenvolver um projeto para <a style="color: blue; font-weight: 500;" href="https://www.huawei.com/br/">Huawei</a>,
-              um chatbot automatizado para auxiliar clientes e futuros compradores com dúvidas.<br>
+              No momento presente, estudando e aplicando Inteligência Artificial para desenvolver um projeto para <a style="color: blue; font-weight: 500;" href="https://www.huawei.com/br/">Huawei</a>,
+              um chatbot automatizado para auxiliar clientes e parceiros com dúvidas.<br>
               </p>
             </p>
             <div class="row">
@@ -136,7 +136,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Java <i class="val"></i></span>
+              <span class="skill">Java Spring Boot<i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -144,7 +144,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val"></i></span>
+              <span class="skill">JavaScript/Typescript <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -203,8 +203,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">1</span>
-              <p>Estágios realizados</p>
+              <span data-toggle="counter-up">4</span>
+              <p>Experiência (anos)</p>
             </div>
           </div>
 
@@ -219,7 +219,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-live-support"></i>
-              <span data-toggle="counter-up">7</span>
+              <span data-toggle="counter-up">11</span>
               <p>Projetos desenvolvidos</p>
             </div>
           </div>
@@ -227,7 +227,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">1</span>
+              <span data-toggle="counter-up">3</span>
               <p>Organizações</p>
             </div>
           </div>
@@ -262,7 +262,7 @@
               <h4>AWS Academy Cloud Foundation</h4>
               <h5>2022</h5>
               <p><em>Amazon Web Services</em></p>
-              <p>Finalizado treinamento em Março/2022. </p>
+              <p>Treinamento finalizado em Março/2022. </p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -272,16 +272,16 @@
               <h5 id="atual">Cargo Atual</h5>
               <br>
               <h5>Dezembro 2022 - Presente</h5>
-              <p><em>Home Office</em></p>
+              <p><em>Home Office - Alemanha</em></p>
               <ul>
-                <li>Comecei a atuar em projetos com clientes, com tecnologias Angular e Java Servlets.</li>
-                <li>Desde projetos feitos do zero, como também projetos para refatorar e realizar novas ferramentas e implementações.</li>
+                <li>Comecei a atuar em projetos com clientes, com tecnologias Angular e Java. Desde projetos feitos do zero, como também projetos para refatorar e realizar novas ferramentas e implementações.</li>
+                <li>Atuei em projetos envolvendo integrações com diferentes APIs e plataformas como Whatsapp API, Google Calendar e LLMs (Redes Neurais)</li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Estágiario Desenvolvedor Back-end</h4>
               <h5>Julho 2021 - Dezembro 2022</h5>
-              <p><em>Home Office </em></p>
+              <p><em>Home Office - São Paulo</em></p>
               <ul>
                 <li>Como primeira tarefa prática, desenvolvi um sistema full-stack para facilitar os processos na área de RH. Este
                   projeto tinha como objetivo manter toda a informação centralizada em uma única aplicação, sem necessidade de
@@ -326,19 +326,6 @@
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
-            data-aos-delay="100">
-            <div class="icon-box">
-              <div>
-                <img src="./assets/img/Credit-Card.png" style="width: 100%; height: auto;"
-                    alt="Projeto Credit-Card">
-              </div>
-              <h4><a href="https://credit-card-forms.vercel.app/">Credit-Card</a></h4>
-              <p>O Credit-Card é um componente que simula o formulário de preenchimento de cartão de crédito em
-                aplicações web, onde é possível adicionar máscara aos inputs e atualizar elementos HTML via DOM.</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
             data-aos-delay="200">
             <div class="icon-box iconbox-red">
               <div>
@@ -352,22 +339,31 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <div>
+                <img src="./assets/img/Credit-Card.png" style="width: 100%; height: auto;"
+                    alt="Projeto Credit-Card">
+              </div>
+              <h4><a href="https://credit-card-forms.vercel.app/">Credit-Card</a></h4>
+              <p>O Credit-Card é um componente que simula o formulário de preenchimento de cartão de crédito em
+                aplicações web, onde é possível adicionar máscara aos inputs e atualizar elementos HTML via DOM.</p>
+            </div>
+          </div>
+
+          
+
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box iconbox-pink">
               <div>
                 <div>
-                  <img src="./assets/img/hotelaguiar.png" style="width: 100%; height: auto;"
-                  alt="Projeto Woody Burger">
+                  <img src="./assets/img/MAGI.png" style="width: 100%; height: auto;"
+                  alt="Projeto MAGI">
                 </div>
               </div>
-              <h4><a href="https://aguiarhotel.vercel.app/">Hotéis Aguiar</a></h4>
-              <p>Projeto focado
-                em conhecimentos Front-end,
-                envolvendo noções de JavaScript.
-                Um sistema direcionado para
-                clientes visualizarem,
-                cadastrarem e administrarem
-                reserva de hotéis.</p>
+              <h4><a href="https://github.com/vsenadev/magi-api-service">MAGI</a></h4>
+              <p>Projeto com finalidade de monitorar ativos através de geolocalização inteligente integrada com uma trava automatizada que apenas desbloqueia o produto com dupla autenticação.</p>
             </div>
           </div>
 
@@ -375,19 +371,13 @@
             <div class="icon-box iconbox-pink">
               <div>
                 <div>
-                  <img src="./assets/img/projetoWoodyBurger.png" style="width: 100%; height: auto;"
-                  alt="Projeto Woody Burger">
+                  <img src="./assets/img/EasySchedule.jpg" style="width: 100%; height: auto;"
+                  alt="Projeto Easy Schedule">
                 </div>
               </div>
-              <h4><a href="https://github.com/Marco-Aguiar/WoodyBurger">Woody Burger</a></h4>
-              <p>Projeto focado
-                em conhecimentos Front-end,
-                envolvendo noções de VueJs,
-                Banco de dados em formato JSON.
-                Um sistema direcionado para
-                funcionários visualizarem,
-                cadastrarem e administrarem
-                pedidos.</p>
+              <h4><a href="https://github.com/Marco-Aguiar/Easy-Schedule">Easy Schedule</a></h4>
+              <p>Projeto pessoal com intuito de desenvolver um sistema de agendamento automatizadom, voltado para negócios como oficinas, barbearias
+                e salões de beleza.</p>
             </div>
           </div>
 
